--- a/Web Dev Task 4/divineacoustichome.html
+++ b/Web Dev Task 4/divineacoustichome.html
@@ -37,7 +37,7 @@
 						</div>
 						<div>
 							<div>
-								<img src="img/hero-bg.png" alt="">
+								<img src="bg.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -81,19 +81,18 @@
 		</div>
 	</section>
 
-	<section class="subscription-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="sub-text">
+	<section>
+			<div>
+				<div>
+					<div>
 						<h2>Book Your Seat for our Shows</h2>
 						<h3>And Enlighten us with your presence</h3>
 						<p></p>
 						<a href="#" class="site-btn">Book Now</a>
 					</div>
 				</div>
-				<div class="col-lg-6">
-					<ul class="sub-list">
+				<div>
+					<ul>
 						<li><img src="img/icons/check-icon.png" alt="">Live Audience</li>
 						<li><img src="img/icons/check-icon.png" alt="">Audience Requests Accepted</li>
 						<li><img src="img/icons/check-icon.png" alt="">English/Hindi Playist</li>
